tests/main_wrapper/bad_main_signature_extra_params_rejected.sim

        fn main(a: i32, b: i32) {
          entry: return
        }
        